Fix visibility and border radis for small box

--- a/styles-conference/assets/stylesheets/styles.css
+++ b/styles-conference/assets/stylesheets/styles.css
@@ -586,7 +586,7 @@ small {
     white-space: wrap;
     margin-left: 5px;
     margin-right: 0;
-    border-radius: 1vw;
+    border-radius: 8px;
   }
 
   .title_popup-card,
